# shared-matryoshka

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  RELATED_WORK.md  STATUS.md  pyproject.toml
configs/: adversarial.yaml  base.yaml  projection_heads.yaml  single_dating.yaml  single_hiring.yaml  v3_contrastive.yaml  v3_mse.yaml  v3_no_prefix.yaml
paper/: main.tex  references.bib
scripts/: evaluate.py  generate_data.py  lambda_setup.sh  run_all.py  train.py
src/shared_matryoshka/: config.py  utils.py
src/shared_matryoshka/data/: compatibility.py  datasets.py  generators.py  schema.py
src/shared_matryoshka/evaluation/: evaluator.py  metrics.py  tables.py
src/shared_matryoshka/losses/: adversarial.py  cross_domain.py  factory.py  infonce.py
src/shared_matryoshka/models/: adversarial.py  base.py  factory.py  matryoshka.py  projection_heads.py  single_domain.py
src/shared_matryoshka/training/: trainer.py
tests/: test_data.py  test_evaluation.py  test_models.py
