[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-matryoshka"
version = "0.1.0"
description = "Cross-domain prefix alignment of human representations via shared matryoshka embeddings"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
